# cpp-app-template

./: .gitignore  CMakeLists.txt  README.md
scratch/: CMakeLists.txt  scratch.cpp
